# transcription_piano

./: CMakeLists.txt  README.md  graphique.c  graphique.h  interface.c  interface.h  note.c  note.h  son.c  son.h  transcription.c  transcription.cfg  transcription.h  transcription_piano.c
Images/: CMakeLists.txt
Sons/: CMakeLists.txt
tools/: export_midi.py  visu_signal.py  visu_spectre.py
